--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
    
 
       <video autoplay muted loop playsinline class="absolute  w-[80%] translate-x-1/4   object-cover ">
-        <source src="./images/logo/backvideo.mp4" type="video/mp4" />
+        <source src="images/logo/backvideo.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     
